# Attendance_Monitoring

./: .dockerignore  .replit  Administrator  Dockerfile  Process 1 Admin(User Management).drawio  README.md  Untitled Diagram.drawio  ci.yml  conftest.py  docker-image.yml  inventory-component.txt  inventory.sql  inventory.txt  log.html  output.xml  package-lock.json  package.json  pyproject.toml  replit.nix  report.html  requirements.txt  test.py  tests.robot
.codesandbox/: tasks.json
.devcontainer/: devcontainer.json
.github/workflows/: action.yml  ci.yml  codeql.yml  django.yml  docker-image.yml
django_project/: settings.py  urls.py
features/: tests.feature
features/steps/: tests.py
flowcharts/: admin_level0_flowchart  admin_level_0.py  admin_level_1.py
inventory/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_user_role_event_task.py  0003_emailattachment_internaluser_alter_order_status.py  0004_accountant_salestransaction.py
static/: styles.css  styles.css.map  styles.scss
static/output/: styles.css  styles.css.map
templates/: base.html  header.html  login.html  registration.html
